fix(master): fix example entity and fix ClicksaveSequence and downgrade to java 17